--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Serafeim Chatzopoulos",
   "main": "server.js",
   "dependencies": {
+    "mongodb": "^3.1.6",
     "n-readlines": "^1.0.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
